Add Vertx Consumers